<resources>
    <string name="app_name">Restaurant</string>
    <string name="registration">Registration</string>
    <string name="your_email">your email</string>
    <string name="your_password">your password</string>
    <string name="name">Name</string>
    <string name="lastname">lastname</string>
    <string name="age">age</string>
    <string name="sign_up">sign up</string>
    <string name="email">Email</string>
    <string name="last_name">Last name</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="forgot_password">Forgot password</string>
    <string name="login">Login</string>
    <string name="phone_number">Phone number</string>
    <string name="log_in">Log in</string>
    <string name="email_or_phone">Email or phone</string>
    <string name="PlanTodo">Enter your email then click on the \'send password\' button. You should receive a message by email informing you that your password has been changed.</string>
    <string name="send_password">Send password</string>
    <string name="all">All</string>
    <string name="all_food">All food</string>
    <string name="hot_food">Hot food</string>
    <string name="desert">Desert</string>
</resources>