<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <ImageView
        android:id="@+id/imageViewHotCat"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageViewDesertCat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewAllFood"
        app:srcCompat="@drawable/soup" />

    <ImageView
        android:id="@+id/imageViewDesertCat"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewAllFood"
        app:layout_constraintStart_toEndOf="@+id/imageViewHotCat"
        app:srcCompat="@drawable/cake" />

    <ImageView
        android:id="@+id/imageViewAllFood"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintHeight_percent="0.6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/imageViewHotCat"
        app:srcCompat="@drawable/allfood"/>

    <TextView
        android:id="@+id/textViewAllFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_food"
        android:textColor="@color/black"
        android:shadowColor="@color/white"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="10"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewAllFood"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewAllFood" />

    <TextView
        android:id="@+id/textViewHotFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hot_food"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:shadowColor="@color/white"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="10"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewHotCat"
        app:layout_constraintEnd_toEndOf="@+id/imageViewHotCat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewHotCat" />

    <TextView
        android:id="@+id/textViewDesert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="@color/white"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="10"
        android:text="@string/desert"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewHotCat"
        app:layout_constraintTop_toTopOf="@+id/imageViewDesertCat" />
</androidx.constraintlayout.widget.ConstraintLayout>